--- a/functions/consumer/elasticsearch-consumer/pom.xml
+++ b/functions/consumer/elasticsearch-consumer/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
-            <version>7.15.2</version>
+            <version>${elasticsearch.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
