--- a/functions/consumer/redis-consumer/src/test/resources/application.properties
+++ b/functions/consumer/redis-consumer/src/test/resources/application.properties
@@ -1,3 +1,1 @@
-spring.redis.host=${embedded.redis.host}
-spring.redis.port=${embedded.redis.port}
-spring.redis.password=${embedded.redis.password}
+# Empty
