add xmpp-consumer and common configuration

--- a/functions/common/pom.xml
+++ b/functions/common/pom.xml
@@ -24,6 +24,7 @@
 		<module>tensorflow-common</module>
 		<module>cdc-debezium-common</module>
 		<module>cdc-debezium-boot-starter</module>
+		<module>xmpp-common</module>
 	</modules>
 
 </project>
