--- a/functions/function-dependencies/pom.xml
+++ b/functions/function-dependencies/pom.xml
@@ -42,11 +42,11 @@
                 <artifactId>ftp-supplier</artifactId>
                <version>${project.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud.fn</groupId>
-                <artifactId>geode-supplier</artifactId>
-               <version>${project.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.cloud.fn</groupId>-->
+<!--                <artifactId>geode-supplier</artifactId>-->
+<!--               <version>${project.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>org.springframework.cloud.fn</groupId>
                 <artifactId>http-supplier</artifactId>
@@ -142,11 +142,11 @@
                 <artifactId>ftp-consumer</artifactId>
                <version>${project.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud.fn</groupId>
-                <artifactId>geode-consumer</artifactId>
-               <version>${project.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.cloud.fn</groupId>-->
+<!--                <artifactId>geode-consumer</artifactId>-->
+<!--               <version>${project.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>org.springframework.cloud.fn</groupId>
                 <artifactId>jdbc-consumer</artifactId>
