--- a/stream-applications-release-train/stream-applications-docs/pom.xml
+++ b/stream-applications-release-train/stream-applications-docs/pom.xml
@@ -44,7 +44,8 @@
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>geode-common</artifactId>
-			<version>${java-functions.version}</version>
+<!--			<version>${java-functions.version}</version>-->
+			<version>1.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
@@ -82,11 +83,11 @@
 			<artifactId>ftp-supplier</artifactId>
 			<version>${java-functions.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud.fn</groupId>
-			<artifactId>geode-supplier</artifactId>
-			<version>${java-functions.version}</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.cloud.fn</groupId>-->
+<!--			<artifactId>geode-supplier</artifactId>-->
+<!--			<version>${java-functions.version}</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>http-supplier</artifactId>
@@ -193,11 +194,11 @@
 			<artifactId>ftp-consumer</artifactId>
 			<version>${java-functions.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud.fn</groupId>
-			<artifactId>geode-consumer</artifactId>
-			<version>${java-functions.version}</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.cloud.fn</groupId>-->
+<!--			<artifactId>geode-consumer</artifactId>-->
+<!--			<version>${java-functions.version}</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.cloud.fn</groupId>
 			<artifactId>jdbc-consumer</artifactId>
