[SB3 Update] Move MongoDbTestContainerSupport to functions/common
- use in mongodb-consumer
- use in mongodb-supplier

--- a/functions/common/pom.xml
+++ b/functions/common/pom.xml
@@ -17,6 +17,7 @@
 		<module>ftp-common</module>
 		<module>function-test-support</module>
 		<module>metadata-store-common</module>
+		<module>mongodb-common</module>
 		<module>mqtt-common</module>
 		<module>redis-common</module>
 		<module>tcp-common</module>
