--- a/functions/supplier/mongodb-supplier/pom.xml
+++ b/functions/supplier/mongodb-supplier/pom.xml
@@ -33,11 +33,18 @@
             <artifactId>splitter-function</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>mongodb</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud.fn</groupId>
+			<artifactId>mongodb-common</artifactId>
+			<version>4.0.0-SNAPSHOT</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 </project>
