--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.springframework.cloud.stream.app</groupId>
-	<artifactId>applications</artifactId>
-	<version>4.0.0-SNAPSHOT</version>
-	<name>applications</name>
-	<description>Infrastructure for stream applications</description>
-	<packaging>pom</packaging>  	<modules>
-		<module>stream-applications-core</module>
-		<module>source</module>
-		<module>sink</module>
-		<module>processor</module>
-		<module>stream-applications-integration-tests</module>
-	</modules></project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.springframework.cloud.stream.app</groupId>
+    <artifactId>applications</artifactId>
+    <version>4.0.0-SNAPSHOT</version>
+    <name>applications</name>
+    <description>Infrastructure for stream applications</description>
+    <packaging>pom</packaging>
+    <modules>
+        <module>stream-applications-core</module>
+        <module>source</module>
+        <module>sink</module>
+        <module>processor</module>
+        <module>stream-applications-integration-tests</module>
+    </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+</project>
