--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -34,4 +34,16 @@
         <module>elasticsearch-sink</module>
         <module>zeromq-sink</module>
     </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
