--- a/functions/common/pom.xml
+++ b/functions/common/pom.xml
@@ -26,5 +26,16 @@
 		<module>cdc-debezium-common</module>
 		<module>cdc-debezium-boot-starter</module>
 	</modules>
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
