--- a/functions/consumer/pom.xml
+++ b/functions/consumer/pom.xml
@@ -32,5 +32,16 @@
 		<module>rsocket-consumer</module>
 		<module>zeromq-consumer</module>
 	</modules>
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
