--- a/functions/function/pom.xml
+++ b/functions/function/pom.xml
@@ -24,5 +24,16 @@
         <module>object-detection-function</module>
         <module>semantic-segmentation-function</module>
     </modules>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
