--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -55,11 +55,16 @@ jobs:
             if ((MAX_PARALLEL == COUNT)); then
               MAX_PARALLEL=$((COUNT + 1))
             fi
-            export MAX_PARALLEL
-            export MATRIX=$(jq -c . matrix.json)
-            export PROCESSORS=$(jq -c '.processors' matrix.json)
-            export SINKS=$(jq -c '.sinks' matrix.json)
-            export SOURCES=$(jq -c '.sources' matrix.json)
+            
+            MATRIX=$(jq -c . matrix.json)
+            PROCESSORS=$(jq -c '.processors' matrix.json)
+            SINKS=$(jq -c '.sinks' matrix.json)
+            SOURCES=$(jq -c '.sources' matrix.json)
+            echo "MAX_PARALLEL=$MAX_PARALLEL" >> $GITHUB_ENV
+            echo "MATRIX=$MATRIX" >> $GITHUB_ENV
+            echo "PROCESSORS=$PROCESSORS" >> $GITHUB_ENV
+            echo "SINKS=$SINKS" >> $GITHUB_ENV
+            echo "SOURCES=$SOURCES" >> $GITHUB_ENV
             if [ "${{ inputs.verbose }}" == "true" ]; then
               echo "MAX_PARALLEL=$MAX_PARALLEL"
               echo "MATRIX=$MATRIX"
