--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -214,6 +214,7 @@ jobs:
       - core
       - parameters
     strategy:
+      max-parallel: 4
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.processors) }}
     runs-on: ubuntu-latest
@@ -242,13 +243,14 @@ jobs:
           DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
           CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
           CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
-        run: ./build-apps.sh "stream-applications/applications/processor/${{ matrix.app }}"
+        run: ./build-app.sh "stream-applications/applications/processor/${{ matrix.app }}"
   sinks:
     if: ${{ needs.parameters.outputs.sinks != '' && needs.parameters.outputs.sinks != null }}
     needs:
       - core
       - parameters
     strategy:
+      max-parallel: 4
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.sinks) }}
     runs-on: ubuntu-latest
@@ -277,13 +279,15 @@ jobs:
           DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
           CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
           CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
-        run: ./build-apps.sh "stream-applications/applications/sink/${{ matrix.app }}"
+        run: ./build-app.sh "stream-applications/applications/sink/${{ matrix.app }}"
   sources:
     if: ${{ needs.parameters.outputs.sources != '' && needs.parameters.outputs.sources != null }}
     needs:
       - core
       - parameters
     strategy:
+      # will be removed when private runners are used.
+      max-parallel: 4
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.sources) }}
     runs-on: ubuntu-latest
@@ -312,7 +316,7 @@ jobs:
           DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
           CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
           CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
-        run: ./build-apps.sh "stream-applications/applications/source/${{ matrix.app }}"
+        run: ./build-app.sh "stream-applications/applications/source/${{ matrix.app }}"
 #  scale-down-runners:
 #    if: ${{ success() }}
 #    runs-on: ubuntu-latest
