--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -219,6 +219,7 @@ jobs:
       - core
       - parameters
     strategy:
+      fail-fast: false
       max-parallel: 4
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.processors) }}
@@ -255,6 +256,7 @@ jobs:
       - core
       - parameters
     strategy:
+      fail-fast: false
       max-parallel: 4
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.sinks) }}
@@ -291,6 +293,7 @@ jobs:
       - core
       - parameters
     strategy:
+      fail-fast: false
       # will be removed when private runners are used.
       max-parallel: 4
       matrix:
