update volume mount, remove unneeded admin config for xmpp server

--- a/functions/consumer/xmpp-consumer/src/test/docker-compose/xmpp/docker-compose.yml
+++ b/functions/consumer/xmpp-consumer/src/test/docker-compose/xmpp/docker-compose.yml
@@ -4,9 +4,7 @@ services:
     image: fishbowler/openfire:latest
     ports:
       - "5222:5222"
-      - "7777:7777"
-      - "9090:9090"
     volumes:
-      - ./_data/openfire:/var/lib/openfire
+      - ./_data/openfire/conf:/var/lib/openfire/conf
     command:
       - -demoboot
