--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -49,7 +49,7 @@
 		<spring-cloud-function.version>4.0.0-SNAPSHOT</spring-cloud-function.version>
 		<spring-cloud-stream-dependencies.version>4.0.0-SNAPSHOT</spring-cloud-stream-dependencies.version>
 		<spring-cloud-stream.version>4.0.0-SNAPSHOT</spring-cloud-stream.version>
-		<test-containers.version>1.16.3</test-containers.version>
+		<test-containers.version>1.17.5</test-containers.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 		<mockserver.version>5.13.2</mockserver.version>
 
@@ -135,6 +135,7 @@
 				</executions>
 				<configuration>
 					<quiet>true</quiet>
+					<doclint>syntax</doclint>
 				</configuration>
 			</plugin>
 			<plugin>
