GH-368: Update AWS code to the latest deps
Fixes https://github.com/spring-cloud/stream-applications/issues/368

* Upgrade to `spring-cloud-aws-2.4.2`; fix respective package changes
* Remove `AutoConfigurationExclusionEnvironmentPostProcessor` since classes in the SC-AWS
are not considered as auto-configuration anymore.
Instead, add an explicit `@Import` into `AmazonS3Configuration`.
Not sure, though, why it was excluded before at all
* Fix `MetadataStoreAutoConfigurationTests` with the current state of code.
Looks like before it was designed for auto-configuration based on classpath content
* Re-enable other AWS S3 tests

This fix has helped to spot a bug in Spring Integration Testing framework:
https://github.com/spring-projects/spring-integration/commit/e2d8eeb04d3cae896dc18fddf64abd62c332b252

--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -43,6 +43,7 @@
 		<spring-boot.version>3.0.0-SNAPSHOT</spring-boot.version>
 		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
 		<spring-rabbit.version>3.0.0-SNAPSHOT</spring-rabbit.version>
+		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
 		<spring-geode.version>1.6.7</spring-geode.version>
 		<spring-cloud.version>2022.0.0-SNAPSHOT</spring-cloud.version>
 		<spring-cloud-starters.version>4.0.0-SNAPSHOT</spring-cloud-starters.version>
