--- a/functions/common/aws-s3-common/pom.xml
+++ b/functions/common/aws-s3-common/pom.xml
@@ -15,7 +15,7 @@
 
     <properties>
         <spring-integration-aws.version>2.5.2</spring-integration-aws.version>
-        <spring-cloud-aws.version>2.2.6.RELEASE</spring-cloud-aws.version>
+        <spring-cloud-aws.version>2.4.2</spring-cloud-aws.version>
     </properties>
 
     <dependencies>
@@ -25,7 +25,7 @@
             <version>${spring-integration-aws.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
+            <groupId>io.awspring.cloud</groupId>
             <artifactId>spring-cloud-starter-aws</artifactId>
             <version>${spring-cloud-aws.version}</version>
         </dependency>
