--- a/functions/consumer/cassandra-consumer/pom.xml
+++ b/functions/consumer/cassandra-consumer/pom.xml
@@ -14,11 +14,6 @@
 	<name>cassandra-consumer</name>
 	<description>Cassandra Consumer</description>
 
-	<properties>
-		<springIntegrationCassandara.version>0.8.0.RELEASE</springIntegrationCassandara.version>
-		<cassandra-unit-spring.version>4.3.1.0</cassandra-unit-spring.version>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -27,19 +22,11 @@
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-cassandra</artifactId>
-			<version>${springIntegrationCassandara.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.cassandraunit</groupId>
-			<artifactId>cassandra-unit-spring</artifactId>
-			<version>${cassandra-unit-spring.version}</version>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>cassandra</artifactId>
 			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>com.addthis.metrics</groupId>
-					<artifactId>reporter-config3</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 	</dependencies>
 
