--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -11,7 +11,7 @@ on:
       verbose:
         type: boolean
         required: false
-        default: false
+        default: true
         description: 'Verbose output'
     secrets:
       DOCKER_HUB_USERNAME:
